@@ -2,5 +2,7 @@ Knot-0.0.1: 1-August-2011
   - First version of Knot.
 Knot-0.1.1: 6-May-2012
   - Knot moved to SourceForge.
-
+knot-0.1.3: 9-Dec-2012
+  - Improved robustness of angle calculation code, to help ensure exported models produce valid files under Windows.
+	- Added code to ensure files are saved out with the default C locale, for compatibility across sytems and correct model exporting.
 
